<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/xAccelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_0_0"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/yAccelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_0_0"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/zAccelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_0_0"
        android:layout_marginTop="8dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/sensorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="380dp"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/recordButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/csv" />

        <Button
            android:id="@+id/clearButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="211dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/clear" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/aboutButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Об авторах"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>